2003-05-13    Dan Elphick <dre00r@ecs.soton.ac.uk>

	Reviewed by Naba Kumar  <naba@gnome.org>
	
	* src/executer.[ch]: Only allow one set params dialog at a time. Fix
	memory leak from glade_xml_new call. Removed gxml field from Executer
	struct as only used in create_executer_dialog and then destroyed.
	
	* src/anjuta.c: Fix warning on getting a page that doesn't exist.
	
	* src/configurer.c: Fix warning trying to connect signal to non-existent
	environment entry in configure dialog and fix crash when closing the
	window.
	
	* src/cvs_cbs.c: Fix deprecated use of gnome_date_edit_get_date; use
	gnome_date_edit_get_time instead.
	
	* main_menubar.c, main_menubar_def.h: Removal of show stack menu item
	in view menu required renumbering elsewhere.

2003-05-10  Etay Meiri  <etay-m@bezeqint.net>

	Reviewed by Naba Kumar  <naba@gnome.org>
	
	* src/breakpoints.c: fixed an error when removing breakpoint
	* src/controls.c: 'run to cursor' is sensitive when debugger not active
	* src/debugger.c: changes to the way the debugger is activated
	* src/debugger.h: clean ups

2003-05-13  Naba Kumar  <naba@gnome.org>

	Patch from  Jean-Noel Guiheneuf  <jnoel@saudionline.com.sa>
	* anjuta.glade, anjuta_dialogs_strings.c, src/memory.c,
	src/memory.h: A new version of memory and the interface
	is now integrated in anjuta.glade

2003-05-09  Naba Kumar  <naba@gnome.org>

	* configure.in: Bumped required gtk version to 2.0.8.
	
2003-05-06  Naba Kumar  <naba@gnome.org>

	src/message-manager-private.cc, src/message-manager.cc: Clean ups.

2003-05-07  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
	* gdl/Makefile.am, printing/Makefile.am: distcheck fixes.

2003-05-06  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
	* scripts/anjuta_import.sh.in, src/defaults.c, src/project_dbase_gui.c
	, tagmanager/c.c: Support for ProC and RDB files.

2003-05-06  Naba Kumar  <naba@gnome.org>

	* src/aneditor.cxx, src/goto_line.c, src/main_menubar_def.h,