@@ -7,3 +7,4 @@ Terminal=false
 MultipleArgs=false
 Type=Application
 Categories=Application;Development;
+StartupNotify=true
