@@ -1,3 +1,7 @@
+2003-05-16  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>
+	* src/main.c, widgets/e-splash.c: Splash screen improvements.
+	* src/anjuta.desktop.in.in: Support startup notification.
+
 2003-05-13    Dan Elphick <dre00r@ecs.soton.ac.uk>
 
 	Reviewed by Naba Kumar  <naba@gnome.org>
